@@ -443,6 +443,9 @@ Release 2.1.0-beta - 2013-07-02
     HDFS-4903. Print trash configuration and trash emptier state in
     namenode log. (Arpit Agarwal via suresh)
 
+    HDFS-4992. Make balancer's mover thread count and dispatcher thread count
+    configurable.  (Max Lapan via szetszwo)
+
   OPTIMIZATIONS
 
     HDFS-4465. Optimize datanode ReplicasMap and ReplicaInfo. (atm)
